# AR_Project

./: README.md
Current_source/Hello_World_example/: Hello-World-SDK-3.sln  Hello-World-SDK-3.vcxproj
Current_source/Hello_World_example/Debug/64/: Hello-World-SDK-3.exp  Hello-World-SDK-3.lib
Current_source/SharedMemory_Example/Mem_Reader/: Mem_Reader.sln
Current_source/SharedMemory_Example/Mem_Reader/Mem_Reader/: Mem_Reader.vcxproj  Source.cpp
Current_source/SharedMemory_Example/Mem_Writer/: Mem_Writer.sln
Current_source/SharedMemory_Example/Mem_Writer/Mem_Writer/: Mem_Writer.vcxproj  Source.cpp
Current_source/Unity_HUD/: Assembly-CSharp.csproj  Unity_HUD.sln  Unity_HUD.userprefs
Current_source/Unity_HUD/Assets/: Default_current.unity  Default_pre_alpha.unity  temp.unity
Current_source/Unity_HUD/Assets/Drawer/: Default_Wireframe.mat  Default_WireframeScreen.mat  Default_Wireframe_Magenta.mat  MoveText_0_2.cs  MoveText_0_3.cs  MoveText_0_4.cs  MoveText_0_4_inverse.cs  RotateCube_0_1.cs  RotateCube_0_2.cs  rwyRemaining.cs
Current_source/Unity_HUD/ProjectSettings/: ProjectSettings.asset
Current_source/XPL_TakeoffPerf_Calc_alpha/: Hello-World-SDK-3.sln  Main.cpp  charconv_temp.h
Current_source/XPL_TakeoffPerf_Calc_alpha_0_1/: Main.cpp  XPL_TakeoffPerf_Calc_alpha_0_1.sln  XPL_TakeoffPerf_Calc_alpha_0_1.vcxproj
Current_source/rwyRemaining_toUnity/: CMakeLists.txt
Current_source/rwyRemaining_toUnity/rwyRemaining_toUnity/: CMakeLists.txt  rwyRemaining_toUnity.cpp  rwyRemaining_toUnity.h
(+53 files in other folders)
