# CMakeList.txt : CMake project for rwyRemaining_toUnity, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_library (rwyRemaining_toUnity SHARED "rwyRemaining_toUnity.cpp" "rwyRemaining_toUnity.h")

# TODO: Add tests and install targets if needed.
